--- a/public/index.html
+++ b/public/index.html
@@ -11,67 +11,95 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body class="bg-light text-center">
+<body>
     <div class="container">
         <div class="py-5 text-center">
-            <svg class="bi bi-funnel-fill" width="10em" height="10em" viewBox="0 0 16 16" fill="red"
-                xmlns="http://www.w3.org/2000/svg">
-                <path d="M2 3.5v-2h12v2l-4.5 5v5l-3 1v-6L2 3.5z" />
-                <path fill-rule="evenodd"
-                    d="M1.5 1.5A.5.5 0 012 1h12a.5.5 0 01.5.5v2a.5.5 0 01-.128.334L10 8.692V13.5a.5.5 0 01-.342.474l-3 1A.5.5 0 016 14.5V8.692L1.628 3.834A.5.5 0 011.5 3.5v-2zm1 .5v1.308l4.372 4.858A.5.5 0 017 8.5v5.306l2-.666V8.5a.5.5 0 01.128-.334L13.5 3.308V2h-11z"
-                    clip-rule="evenodd" />
-            </svg>
+            <img src="assets/images/logo.png">
             <h1>Youtube Chapter Extractor</h1>
-            <p class="lead">Just enter a Youtube video Id to extract the chapters from description.</p>
+            <p class="lead">Just enter a Youtube video URL to extract the chapters from description.</p>
         </div>
 
         <div class="row">
             <div class="col-12">
-                <div class="input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">
-                            <svg class="bi bi-camera-video" width="1em" height="1em" viewBox="0 0 16 16"
-                                fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd"
-                                    d="M2.667 3.5c-.645 0-1.167.522-1.167 1.167v6.666c0 .645.522 1.167 1.167 1.167h6.666c.645 0 1.167-.522 1.167-1.167V4.667c0-.645-.522-1.167-1.167-1.167H2.667zM.5 4.667C.5 3.47 1.47 2.5 2.667 2.5h6.666c1.197 0 2.167.97 2.167 2.167v6.666c0 1.197-.97 2.167-2.167 2.167H2.667A2.167 2.167 0 01.5 11.333V4.667z"
-                                    clip-rule="evenodd" />
-                                <path fill-rule="evenodd"
-                                    d="M11.25 5.65l2.768-1.605a.318.318 0 01.482.263v7.384c0 .228-.26.393-.482.264l-2.767-1.605-.502.865 2.767 1.605c.859.498 1.984-.095 1.984-1.129V4.308c0-1.033-1.125-1.626-1.984-1.128L10.75 4.785l.502.865z"
-                                    clip-rule="evenodd" />
-                            </svg>
+                <form class="video_link_form">
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">
+                                <svg class="bi bi-camera-video" width="1em" height="1em" viewBox="0 0 16 16"
+                                    fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd"
+                                        d="M2.667 3.5c-.645 0-1.167.522-1.167 1.167v6.666c0 .645.522 1.167 1.167 1.167h6.666c.645 0 1.167-.522 1.167-1.167V4.667c0-.645-.522-1.167-1.167-1.167H2.667zM.5 4.667C.5 3.47 1.47 2.5 2.667 2.5h6.666c1.197 0 2.167.97 2.167 2.167v6.666c0 1.197-.97 2.167-2.167 2.167H2.667A2.167 2.167 0 01.5 11.333V4.667z"
+                                        clip-rule="evenodd" />
+                                    <path fill-rule="evenodd"
+                                        d="M11.25 5.65l2.768-1.605a.318.318 0 01.482.263v7.384c0 .228-.26.393-.482.264l-2.767-1.605-.502.865 2.767 1.605c.859.498 1.984-.095 1.984-1.129V4.308c0-1.033-1.125-1.626-1.984-1.128L10.75 4.785l.502.865z"
+                                        clip-rule="evenodd" />
+                                </svg>
 
-                        </span>
+                            </span>
+                        </div>
+
+                        <input type="text" class="form-control form-control-lg" id="video"
+                            placeholder="Enter a Youtube Video URL" required="">
+                        <button class="mt-3 btn btn-lg btn-primary btn-block" type="submit">Extract</button>
                     </div>
-
-                    <input type="text" class="form-control form-control-lg" id="video"
-                        placeholder="Enter a Youtube Video Id" required="">
-
-                </div>
-
+                </form>
             </div>
         </div>
-        <button class="mt-3 btn btn-lg btn-primary btn-block"
-            onclick="extract(document.querySelector('#video').value)">Extract</button>
+
         <hr class="mb-5">
         <div id="results" class="row justify-content-center"></div>
 
-        <script src="js/youtube-chapters.js"></script>
+        <footer class="footer mt-5 text-center">
+            <div class="container">
+                <p class="text-muted">
+                    Created with
+                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart-fill" fill="currentColor"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd"
+                            d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
+                    </svg>
+                    by <a href="http://codigofonte.tv" target="_blank">Codigo Fonte TV</a>.
+                    <br>
+                    Source code available on <a href="https://github.com/gabrielfroes/youtube-chapter-extractor"
+                        target="_blank">GitHub</a>.
+                </p>
+
+                <label>
+                    <input type="checkbox" name="mode" id="mode">
+                    <span class="check"></span>
+                </label>
+        </footer>
+
+        <script src="assets/js/youtube-chapters.js"></script>
         <script>
             const loading =
                 '<div class="spinner-grow text-danger" role="status"><span class="sr-only">Loading...</span></div>'
 
-            const extract = async value => {
+            document.querySelector('#mode').addEventListener("click", (e) => {
+                document.querySelector('body').classList.toggle('dark')
+            })
+
+            document.querySelector('.video_link_form').addEventListener("submit", (e) => {
+                e.preventDefault()
+                extract(document.querySelector('#video').value)
+            })
+
+            const extract = async url => {
                 let resultsElement = document.querySelector('#results')
                 resultsElement.innerHTML = loading
 
-                if (value == "") {
-                    setMessage('Invalid video id!')
+                const videoId = YoutubeChapters.videoIdFromURL(url)
+
+                if (videoId == "") {
+                    setMessage('Invalid video URL!')
                     return
                 }
 
-                let loadYoutubeData = await YoutubeChapters.load(value)
+                let loadYoutubeData = await YoutubeChapters.load(videoId)
                 if (!loadYoutubeData) {
                     setMessage('There is no topics on this video')
                     return
